tests/typing/fail/star_methodcall_wrong_to_a.rb
class C
  def to_a
    [true,false]
  end
end

class A
  def f(x,y)
    x+y
  end

  def m()
    z = C.new
    f(*z)
  end
end

A.new.m
